<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp" tools:context=".PuzzleActivity"
    android:id="@+id/puzzle_container">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_photo_button_label"
        android:id="@+id/photo_button"
        android:onClick="dispatchTakePictureIntent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shuffle_button_label"
        android:id="@+id/shuffle_button"
        android:onClick="shuffleImage"
        android:layout_alignTop="@+id/photo_button"
        android:layout_toEndOf="@+id/photo_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solve_button_label"
        android:id="@+id/solve_button"
        android:onClick="solve"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/shuffle_button" />

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="117dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="95dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/solve_button"
        android:onClick="stop"
        android:text="M" />

</RelativeLayout>
